# helpy-discord-bot

./: .gitignore  Dockerfile  README.md  hel.py  pyproject.toml  requirements.txt
helpy_discord_bot/: __main__.py
tests/: test___main__.py
